# MapEngine

./: AnubisDefines.h  AnubisEnums.h  AnubisPlatform.h  AnubisTypes.h  CMakeLists.txt  LICENSE.txt  Main.cpp  README.md
AnubisMath/: CMakeLists.txt  Stdafx.h
AnubisMath/include/: EngineMath.h  EngineMathMatrix.h  EngineMathQuaternion.h  EngineMathVectors.h  Frustum.h  Grid.h  MathUtils.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  OrthographicProjection.h  PrespectiveProjection.h  Quaternion.h  Ray.h  Stdafx.h  Transform.h  TypeMatrix2.h  TypeMatrix3.h  TypeMatrix4.h  TypeVector2.h  TypeVector3.h  TypeVector4.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h
AnubisMath/src/: EngineMath.cpp  EngineMathMatrix.cpp  EngineMathQuaternion.cpp  EngineMathVectors.cpp  Frustum.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Ray.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Vertex.cpp
AnubisRenderer/: CMakeLists.txt
AnubisRenderer/include/: Camera.h  CameraManager.h  DebugRenderer.h  GLUtils.h  RendererManager.h  Shader.h  Texture.h  UniformBufferObject.h
AnubisRenderer/src/: Camera.cpp  CameraManager.cpp  DebugRenderer.cpp  GLUtils.cpp  RendererManager.cpp  Shader.cpp  Texture.cpp  UniformBufferObject.cpp
Assets/Config/: EngineConfig.json  EngineShaders.json  EngineTextures.json
Assets/Shaders/Errors/: error_shader.vert
Assets/Shaders/Renderer/: basic_renderer.frag  basic_renderer.vert  debug_renderer.frag  debug_renderer.vert  terrain_renderer.frag  terrain_renderer.vert
Assets/Shaders/UI/: userinterface.frag  userinterface.vert
CoreEngine/: CMakeLists.txt
CoreEngine/include/: CoreUtils.h  InputManager.h  LogManager.h  ShadersManager.h  StateManager.h  TimerManager.h  UserInterface.h  Window.h  WindowManager.h
CoreEngine/src/: CoreUtils.cpp  InputManager.cpp  LogManager.cpp  ShadersManager.cpp  StateManager.cpp  TimerManager.cpp  UserInterface.cpp  Window.cpp  WindowManager.cpp  stb_image_write.cpp
LibImageUI/: CMakeLists.txt  ImGuiFileDialog.cpp  Stdafx.cpp  Stdafx.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
LibImageUI/ImGuizmo/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
MapEngine/: CMakeLists.txt  MapEngine.cpp  MapEngine.h
MapLayer/: CMakeLists.txt
MapLayer/include/: CoordTransform.h  MapCamera.h  MapManager.h  MapProjection.h  PolyLineRenderer.h  PolyTriangulationRenderer.h  TileGrid.h  TileGridRenderer.h  TileIndex.h
MapLayer/src/: CoordTransform.cpp  MapManager.cpp  PolyLineRenderer.cpp  PolyTriangulationRenderer.cpp  TileGrid.cpp  TileGridRenderer.cpp  TileIndex.cpp
